# ConvRFI

./: .gitignore  README.md  RFIconvFlag.py  benchmark.py  benchmark.py.lprof  benchmark_script.py  plot_benchmark.ipynb  pyproject.toml  test_flag.ipynb  test_withH5.ipynb
