[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ConvRFI"
version = "0.1.0"
description = "Convolutional Neural Network-based RFI mitigation"
readme = "README.md"
authors = [{ name = "Peijin Zhang", email = "peijin94@gmail.com" }]
keywords = ["RFI", "radio astronomy", "machine learning", "CNN"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torchvision",
    "matplotlib",
    "h5py",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/peijin94/ConvRFI"
Repository = "https://github.com/peijin94/ConvRFI.git"
Issues = "https://github.com/peijin94/ConvRFI/issues"

[tool.setuptools]
packages = ["ConvRFI"]

[tool.setuptools.package-data]
ConvRFI = ["*.py"]

[tool.setuptools.exclude-package-data]
ConvRFI = ["tests/*", "docs/*"]
